tests/NormalTests/paczka1/small_fuzzy/52092485.err
Error in line 3: S37 S37 48,9
Error in line 12: bvahVI A234 26,9
Error in line 14: bvahVI A612 35,89
Error in line 5: S37 A234 340,5
